--- a/Dockerfile.openshift
+++ b/Dockerfile.openshift
@@ -1,10 +1,10 @@
 # builder image
-FROM image-registry.openshift-image-registry.svc:5000/openshift/golang:latest as builder-goapp
+FROM image-registry.openshift-image-registry.svc:5000/openshift/golang:latest as builder-build-app
 
 WORKDIR /build
-ADD ./goapp/ /build/
+ADD ./build-app/ /build/
 RUN mkdir /tmp/cache
-RUN GOCACHE=/tmp/cache CGO_ENABLED=0 GOOS=linux go build -a -o /tmp/goapp .
+RUN GOCACHE=/tmp/cache CGO_ENABLED=0 GOOS=linux go build -a -o /tmp/build-app .
 
 # build migration tool
 FROM image-registry.openshift-image-registry.svc:5000/openshift/golang:latest as builder-migrate
@@ -34,7 +34,7 @@ RUN microdnf install -y shadow-utils \
 # Install App
 RUN mkdir ${APP_BASEDIR}
 WORKDIR ${APP_BASEDIR}
-COPY --from=builder-goapp /tmp/goapp .
+COPY --from=builder-build-app /tmp/build-app .
 COPY --from=builder-migrate /tmp/migrate .
 
 # Change Owner
@@ -47,4 +47,4 @@ USER ${APPUSER}
 EXPOSE ${APP_PORT}
 
 # executable
-CMD [ "./goapp" ]
+CMD [ "./build-app" ]
