--- a/openshift/deploy-goapp.yaml
+++ b/openshift/deploy-goapp.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: goapp
     app.kubernetes.io/part-of: goapp
-  name: goapp
+  name: build-app
 spec:
   replicas: 1
   selector:
